# symsan

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  check.sh
.github/workflows/: test.yml
compiler/: CMakeLists.txt  ko_clang.c
driver/: CMakeLists.txt  fgtest.cpp  harness-proxy.c
driver/aflpp/: CMakeLists.txt  README.md  ast.h  cov.h  i2s-solver.cpp  jit-solver.cpp  rgd.proto  solver.h  symsan.cpp  task.h  union_find.h  z3-solver.cpp
driver/aflpp/jigsaw/: CMakeLists.txt  gd.cc  grad.h  input.cc  input.h  jit.cc  jit.h  rgdJit.h
driver/aflpp/wheels/lockfreehash/cuckoo/: Makefile  hash_table.h  thread_service.h
driver/aflpp/wheels/lockfreehash/lprobe/: utilities.h
driver/aflpp/wheels/threadpool/: ctpl.h
driver/launcher/: CMakeLists.txt  launch.c
driver/mazerunner/: aflgo-rt.o.c
examples/libming/: libming-CVE-2018-8962.sh
examples/objdump/: objdump-CVE-2017-8392.sh
examples/objdump/in/: test
experiment_scripts/: libming-CVE-2018-8962.sh  objdump-CVE-2017-8392.sh
experiments/objdump/: objdump-CVE-2017-8392.sh
include/: alloc_inl.h  ast.h  cov.h  defs.h  launch.h  parse-rgd.h  parse-z3.h  parse.h  solver.h  task.h  task_mgr.h  union_find.h
instrumentation/: CMakeLists.txt  TaintPass.cpp  aflgo-pass.so.cc
libcxx/: CMakeLists.txt  rebuild.sh
mazerunner/: CMakeLists.txt  afl.py  agent.py  backend_solver.py  builtin_solver.py  config.py  defs.py  distance.py  divergent_test.py  executor.py  executor_symsan_lib.py  exploit_agent.py  explore_agent.py  fgtest.py  knowledge.json  learner.py  llm_baseline.py  mazerunner.py  minimizer.py  model.py  prompt.py  q_learning.py  record_agent.py  replay_agent.py  requirements.txt  seed_scheduler.py  source_code.py  static_analysis.py  static_anlysis.py  test_distance.py  trace_analyzer.py  utils.py
parsers/: CMakeLists.txt  rgd-parser.cpp
python/: CMakeLists.txt  README.md  symsan-py.cpp  test.py
runtime/: CMakeLists.txt
runtime/aflgo/: CMakeLists.txt  aflgo-rt.o.c  aflgo-rt.o.cpp
runtime/cmake/: AddCompilerRT.cmake  SanitizerUtils.cmake
runtime/cmake/CustomLibcxx/: CMakeLists.txt
runtime/dfsan/: CMakeLists.txt  dfsan.cpp  dfsan.h  dfsan_custom.cpp  dfsan_flags.inc  dfsan_interceptors.cpp  dfsan_platform.h  done_abilist.txt  libc++_abilist.txt  libc_ubuntu1404_abilist.txt  libc_ubuntu1804_abilist.txt  libc_ubuntu2204_abilist.txt  libc_ubuntu2404_abilist.txt  union_hashtable.cpp  union_hashtable.h  union_util.cpp
runtime/dfsan/scripts/: build-libc-list.py
runtime/hashset/: CMakeLists.txt  hash.h  hashmap.c  hashmap.h  hashset.c  hashset.cpp  hashset.h
solvers/: CMakeLists.txt  fastgen.cpp  i2s-solver.cpp  jit-solver.cpp  z3-solver.cpp  z3-ts.cpp  z3.cpp
solvers/jigsaw/: CMakeLists.txt  config.h  gd.cc  grad.cc  input.cc  input.h  jit.cc  rgdJit.h
solvers/wheels/lockfreehash/cuckoo/: benchmark_lockfree_ht.h  benchmark_unordered_map.h  lockfree_hash_table.cpp  lockfree_hash_table.h  main.cpp
solvers/wheels/lockfreehash/lprobe/: alloc.h
solvers/wheels/threadpool/: threadpool_example.cpp
tests/: CMakeLists.txt  aggregate.c  atomicrmw.c  bitflip.c  bool.c  call_fn.c  call_fn2.c  call_fn3.c  cf1.c  context.c  cpp_fstream.cpp  cpp_map.cpp  cpp_string.cpp  gep.c  if_eq.c  infer_type.c  lib.h  lit.cfg  lit.site.cfg.in  loop.c  memcmp.c  mini.c  mini2.c  partial_concrete.c  pointer.c  shift_and.c  sign.c  stdin.c  strcmp.c  strcmp2.c  switch.c  unaligned_load.c
tests/alloca/: native
tests/asan/: native
tests/bitflip/: native
tests/bool/: native
tests/call_fn/: native
tests/call_fn2/: native
tests/call_fn3/: i  native
tests/cf1/: native
tests/cf2/: native
tests/cf3/: native
tests/context/: native
tests/fcmp/: native
tests/gep/: native
tests/gep2/: native
tests/if_eq/: native
tests/infer_type/: native
tests/loop/: native
tests/memcmp/: native
tests/mini/: .mini.c.swp  native
tests/mini2/: mini2.c  native
tests/pointer/: native
tests/recursion/: native
tests/shift_and/: native
tests/sign/: native
tests/stat/: native
tests/strcmp/: native
tests/strcmp2/: native
tests/switch/: native
tests/switch2/: native
tests/timeout/: native
wrappers/: CMakeLists.txt
