cmake_minimum_required(VERSION 3.10)
project(AFLGORT LANGUAGES C)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_library(AFLGORT STATIC aflgo-rt.o.c)
target_include_directories(AFLGORT PRIVATE 
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/../runtime
)
install(TARGETS AFLGORT DESTINATION ${SYMSAN_LIB_DIR})
